--- a/src/main/resources/fxml/SalasananvaihtoIkkuna.fxml
+++ b/src/main/resources/fxml/SalasananvaihtoIkkuna.fxml
@@ -2,20 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.PasswordField?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" stylesheets="@../styles/Styles.css" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SalasananvaihtoController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SalasananvaihtoController">
     <children>
         <Label fx:id="usernameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="71.0" prefHeight="30.0" prefWidth="500.0" text="KÄYTTÄJÄNIMI" textFill="WHITE">
             <font>
                 <Font name="Futura Bk BT Book" size="25.0" />
             </font>
         </Label>
-        <Button fx:id="vaihdasalasanaNappi" layoutX="172.0" layoutY="403.0" mnemonicParsing="false" onMouseClicked="#vaihdasalasanaNappiPainettu" text="VAIHDA SALASANA">
+        <Button fx:id="vaihdasalasanaNappi" alignment="CENTER" contentDisplay="CENTER" layoutX="142.0" layoutY="395.0" mnemonicParsing="false" onMouseClicked="#vaihdasalasanaNappiPainettu" prefWidth="207.0" text="VAIHDA SALASANA">
             <font>
                 <Font name="Futura Bk BT Book" size="15.0" />
             </font>
@@ -40,12 +38,12 @@
                 <Font size="16.0" />
             </font>
         </PasswordField>
-        <Label fx:id="uusisalasanaLabel" layoutX="19.0" layoutY="196.0" text="UUSI SALASANA" textFill="WHITE">
+        <Label fx:id="uusisalasanaLabel" layoutX="19.0" layoutY="196.0" prefHeight="27.0" prefWidth="472.0" text="UUSI SALASANA" textFill="WHITE">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label fx:id="vanhasalasanaLabel" layoutX="19.0" layoutY="127.0" text="VANHA SALASANA" textFill="WHITE">
+        <Label fx:id="vanhasalasanaLabel" layoutX="19.0" layoutY="127.0" prefHeight="27.0" prefWidth="472.0" text="VANHA SALASANA" textFill="WHITE">
             <font>
                 <Font size="18.0" />
             </font>
@@ -60,7 +58,7 @@
                 <Font size="16.0" />
             </font>
         </PasswordField>
-        <Label fx:id="uusisalasana2Label" layoutX="16.0" layoutY="269.0" text="UUSI SALASANA UUDELLEEN" textFill="WHITE">
+        <Label fx:id="uusisalasana2Label" layoutX="16.0" layoutY="269.0" prefHeight="27.0" prefWidth="472.0" text="UUSI SALASANA UUDELLEEN" textFill="WHITE">
             <font>
                 <Font size="18.0" />
             </font>
