--- a/src/main/resources/fxml/VarausAdmin.fxml
+++ b/src/main/resources/fxml/VarausAdmin.fxml
@@ -16,8 +16,8 @@
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="876.0" prefWidth="1772.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.VarausAdminController">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.60004577636715" minWidth="0.0" prefWidth="50.20001831054688" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="302.4" minWidth="0.0" prefWidth="251.79998168945315" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.60004577636715" minWidth="0.0" prefWidth="69.59998168945313" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="302.4" minWidth="0.0" prefWidth="232.80001831054688" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="479.99998779296874" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="169.60001220703123" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="705.6" minWidth="10.0" prefWidth="585.40009765625" />
@@ -49,7 +49,7 @@
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="39.0" prefWidth="116.0" text="TAKAISIN" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+      <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="50.0" prefWidth="145.0" text="TAKAISIN" GridPane.columnIndex="1" GridPane.halignment="LEFT">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -82,7 +82,6 @@
                      <children>
                         <TableView fx:id="varauksetTableView" editable="true" maxWidth="-Infinity" prefHeight="566.0" prefWidth="1628.0">
                            <columns>
-                              <TableColumn fx:id="cbColumn" prefWidth="35.99999922513962" resizable="false" />
 
                               <TableColumn fx:id="nimiColumn" editable="false" prefWidth="340.0000114440918" resizable="false" text="VARAAJAN NIMI" />
                               <TableColumn fx:id="tavaraColumn" editable="false" prefWidth="382.3999328613281" resizable="false" text="TAVARA" />
@@ -109,7 +108,7 @@
                               <TableColumn fx:id="varausidColumn" editable="false" prefWidth="155.9998779296875" resizable="false" text="VARAUSID" />
                               <TableColumn fx:id="varauskuvausColumn" prefWidth="240.800048828125" resizable="false" text="KUVAUS" />
                               <TableColumn fx:id="palautettuColumn" maxWidth="423.199951171875" minWidth="0.0" prefWidth="130.4000244140625" resizable="false" text="AKTIIVISUUS" />
-                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="154.4000244140625" resizable="false" text="HYVÄKSYNTÄ" />
+                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="164.0" resizable="false" text="HYVÄKSYNTÄ" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -121,7 +120,7 @@
             </Tab>
          </tabs>
       </TabPane>
-      <Button fx:id="poistaBtn" mnemonicParsing="false" onMouseClicked="#poistaBtnPainettu" prefHeight="49.0" prefWidth="170.0" text="POISTA" GridPane.columnIndex="3" GridPane.rowIndex="3">
+      <Button fx:id="poistaBtn" mnemonicParsing="false" onMouseClicked="#poistaBtnPainettu" prefHeight="85.0" prefWidth="243.0" text="POISTA" GridPane.columnIndex="3" GridPane.rowIndex="3">
          <font>
             <Font name="System Bold" size="32.0" />
          </font>
