--- a/src/main/resources/fxml/Varausikkuna.fxml
+++ b/src/main/resources/fxml/Varausikkuna.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="varausPane" maxHeight="-Infinity" stylesheets="@../styles/Styles.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.varausController">
+<Pane fx:id="varausPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.varausController">
     <children>
         <Label fx:id="itemLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="47.0" layoutY="73.0" prefHeight="30.0" prefWidth="411.0" text="TAVARAN TIEDOT" textAlignment="CENTER" textFill="WHITE">
             <font>
@@ -16,25 +16,25 @@
             </font>
         </Label>
         <DatePicker fx:id="mistaDp" layoutX="55.0" layoutY="156.0" prefHeight="25.0" prefWidth="119.0" />
-        <Button fx:id="varausNappi" layoutX="195.0" layoutY="352.0" mnemonicParsing="false" onAction="#varausNappiPainettu" text="TEE VARAUS">
+        <Button fx:id="varausNappi" alignment="CENTER" contentDisplay="CENTER" layoutX="50.0" layoutY="343.0" mnemonicParsing="false" onAction="#varausNappiPainettu" prefHeight="49.0" prefWidth="411.0" text="TEE VARAUS">
             <font>
                 <Font name="Futura Bk BT Book" size="15.0" />
             </font>
         </Button>
-        <Label fx:id="titleLabel" layoutX="142.0" layoutY="11.0" text="UUSI VARAUS" textFill="WHITE">
+        <Label fx:id="titleLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="48.0" layoutY="11.0" prefHeight="41.0" prefWidth="376.0" text="UUSI VARAUS" textFill="WHITE" textOverrun="CLIP">
             <font>
                 <Font name="Futura Bk BT Book" size="34.0" />
             </font>
         </Label>
         <Spinner fx:id="mistaSpinner" layoutX="55.0" layoutY="196.0" prefHeight="25.0" prefWidth="119.0" />
         <DatePicker fx:id="mihinDp" layoutX="336.0" layoutY="155.0" prefHeight="25.0" prefWidth="119.0" />
-        <Label fx:id="mihinLabel" layoutX="373.0" layoutY="123.0" text="MIHIN" textFill="WHITE">
+        <Label fx:id="mihinLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="335.0" layoutY="123.0" prefHeight="25.0" prefWidth="119.0" text="MIHIN" textFill="WHITE">
             <font>
                 <Font name="Futura Bk BT Book" size="20.0" />
             </font>
         </Label>
         <Spinner fx:id="mihinSpinner" layoutX="336.0" layoutY="196.0" prefHeight="25.0" prefWidth="119.0" />
-        <Label fx:id="mistaLabel" layoutX="79.0" layoutY="124.0" text="MISTÄ" textFill="WHITE">
+        <Label fx:id="mistaLabel" alignment="CENTER" contentDisplay="BOTTOM" layoutX="54.0" layoutY="124.0" prefHeight="25.0" prefWidth="119.0" text="MISTÄ" textFill="WHITE">
             <font>
                 <Font name="Futura Bk BT Book" size="20.0" />
             </font>
@@ -45,7 +45,7 @@
                 <Font name="Arial Black" size="15.0" />
             </font>
         </Button>
-        <Label fx:id="lisatiedotLabel" layoutX="190.0" layoutY="233.0" text="LISÄTIEDOT:" textFill="WHITE">
+        <Label fx:id="lisatiedotLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="47.0" layoutY="237.0" prefHeight="25.0" prefWidth="411.0" text="LISÄTIEDOT:" textFill="WHITE" textOverrun="CLIP">
             <font>
                 <Font name="Futura Bk BT Book" size="20.0" />
             </font>
