--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,8 +1,66 @@
-.button, .button:focused {
+/* button */
+
+.button{
     -fx-font-weight: bold;
      font:"System Bold";
     -fx-font-size: 18;
+    -fx-text-fill: white;
+    -fx-background-color: black;
+    -fx-border-color: white;
+    -fx-border-width: 0.25em;
 }
+
+.button:hover {
+    -fx-border-color: darkgray;
+}
+
+#sulkuNappi{
+    -fx-border-width: 0;
+    -fx-text-fill: black;
+}
+
+/* choice-box */
+
+#categorySelect:hover {
+    -fx-border-color: darkgray;
+}
+
+#categorySelect {
+    -fx-font-weight: bold;
+     font:"System Bold";
+    -fx-font-size: 18;
+    -fx-background-color: black;
+    -fx-text-fill: white;
+    -fx-border-color: white;
+    -fx-border-width: 0.25em;
+    -fx-mark-color : white;
+    -fx-prompt-text-fill: white;
+}
+
+#categorySelect .context-menu {
+    -fx-background-color: black;
+}
+
+#categorySelect .label {
+    -fx-text-fill: white;
+}
+
+#categorySelect .menu-item:focused {
+    -fx-background-color: white;
+}
+
+#categorySelect .menu-item:focused > .label {
+    -fx-text-fill: black; 
+}
+#categorySelect .menu-item > .label {
+    -fx-text-fill: white; 
+}
+
+#loginBtn {
+    -fx-background-color: #353535;
+    -fx-font-size: 36;
+}
+
 #bgPane{
     -fx-background-image: url("..//bgLarge.png");
     -fx-background-repeat: stretch;
@@ -13,4 +71,165 @@
 .tooltip{
     -fx-font-weight: normal;
     -fx-font-size: 16;
+}
+
+/* choice-box */
+
+#LuvanvaraisuusChoiceBox:hover {
+    -fx-border-color: darkgray;
+}
+
+#LuvanvaraisuusChoiceBox {
+    -fx-font-weight: bold;
+     font:"System Bold";
+    -fx-font-size: 18;
+    -fx-background-color: black;
+    -fx-text-fill: white;
+    -fx-border-color: white;
+    -fx-border-width: 0.25em;
+    -fx-mark-color : white;
+    -fx-prompt-text-fill: white;
+}
+
+#LuvanvaraisuusChoiceBox .context-menu {
+    -fx-background-color: black;
+}
+
+#LuvanvaraisuusChoiceBox .label {
+    -fx-text-fill: white;
+}
+
+#LuvanvaraisuusChoiceBox .menu-item:focused {
+    -fx-background-color: white;
+}
+
+#LuvanvaraisuusChoiceBox .menu-item:focused > .label {
+    -fx-text-fill: black; 
+}
+#LuvanvaraisuusChoiceBox .menu-item > .label {
+    -fx-text-fill: white; 
+}
+
+/* TabPane */
+
+.tab-pane .tab-header-area .tab-header-background {
+    -fx-background-color: black;
+}
+
+.tab-pane
+{
+    -fx-tab-min-width:90px;
+}
+
+.tab{
+}
+.tab-pane .tab
+{
+    -fx-background-color: black;
+    -fx-border-color: white;
+    -fx-border-width: 0.3em;
+    -fx-tab-min-height: 100%;
+}
+
+.tab-pane .tab:selected
+{
+    -fx-background-color: white;
+    -fx-text-fill: black;
+}
+
+.tab .tab-label { 
+    -fx-alignment: CENTER;
+    -fx-text-fill: white;
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+}
+
+.tab:selected .tab-label { 
+    -fx-alignment: CENTER;
+    -fx-text-fill: black;
+}
+
+/* Tableview */
+
+.table-view .column-header *{
+    -fx-background-color: black;
+}
+
+.table-view .column-header {
+    -fx-border-color: white;
+    -fx-border-width: .1;
+}
+
+.table-view .column-header, .table-view .filler {
+    -fx-text-fill: white;
+    -fx-border-width: 0, 0;
+    -fx-font-size: 12px;
+}
+
+.table-view .column-header .label {
+    -fx-text-fill: white;
+}
+
+.table-view .column-header .arrow {
+    -fx-background-color: white;
+}
+
+.table-view .table-cell{
+    -fx-text-fill: black;
+}
+
+/*titledpane*/
+
+.titled-pane > .title > .arrow-button .arrow 
+{
+-fx-background-color: white;
+}
+
+.titled-pane > .title 
+{
+-fx-background-color: black;
+-fx-background-insets: 0, 1, 2;
+-fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
+-fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
+}
+
+.titled-pane {
+    -fx-text-fill: white;
+}
+
+/* choice-box */
+
+#valtuudetChoiceBox:hover {
+    -fx-border-color: darkgray;
+}
+
+#valtuudetChoiceBox {
+    -fx-font-weight: bold;
+     font:"System Bold";
+    -fx-font-size: 18;
+    -fx-background-color: black;
+    -fx-text-fill: white;
+    -fx-border-color: white;
+    -fx-border-width: 0.25em;
+    -fx-mark-color : white;
+    -fx-prompt-text-fill: white;
+}
+
+#valtuudetChoiceBox .context-menu {
+    -fx-background-color: black;
+}
+
+#valtuudetChoiceBox .label {
+    -fx-text-fill: white;
+}
+
+#valtuudetChoiceBox .menu-item:focused {
+    -fx-background-color: white;
+}
+
+#valtuudetChoiceBox .menu-item:focused > .label {
+    -fx-text-fill: black; 
+}
+#valtuudetChoiceBox .menu-item > .label {
+    -fx-text-fill: white; 
 }
