--- a/src/main/resources/fxml/VarausAdmin.fxml
+++ b/src/main/resources/fxml/VarausAdmin.fxml
@@ -20,8 +20,8 @@
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="302.4" minWidth="0.0" prefWidth="232.80001831054688" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="479.99998779296874" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="169.60001220703123" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="705.6" minWidth="10.0" prefWidth="585.40009765625" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="140.59990234375005" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="705.6" minWidth="10.0" prefWidth="575.0000244140625" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="149.39997558593745" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="0.0" prefWidth="48.59999999999991" />
   </columnConstraints>
   <rowConstraints>
@@ -36,7 +36,7 @@
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="39.0" prefWidth="110.0" text="LOGOUT" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.halignment="LEFT">
+      <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="50.0" prefWidth="124.0" text="LOGOUT" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.halignment="LEFT">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -87,7 +87,7 @@
                               <TableColumn fx:id="tavaraColumn" editable="false" prefWidth="382.3999328613281" resizable="false" text="TAVARA" />
                               <TableColumn fx:id="alkupvmColumn" editable="false" minWidth="0.0" onEditCommit="#alkupvmEditCommit" prefWidth="160.0" resizable="false" text="ALKUPVM" />
                               <TableColumn fx:id="paattymispvmColumn" editable="false" minWidth="0.0" onEditCommit="#paattymispvmEditCommit" prefWidth="183.2000732421875" resizable="false" text="PÄÄTTYMISPVM" />
-                              <TableColumn fx:id="kuvausColumn" editable="false" maxWidth="692.0000122070312" onEditCommit="#kuvausEditCommit" prefWidth="522.39990234375" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="kuvausColumn" editable="false" maxWidth="692.0000122070312" onEditCommit="#kuvausEditCommit" prefWidth="560.0" resizable="false" text="KUVAUS" />
 
                            </columns>
                         </TableView>
