--- a/src/main/resources/fxml/SalasananvaihtoIkkuna.fxml
+++ b/src/main/resources/fxml/SalasananvaihtoIkkuna.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SalasananvaihtoController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="458.0" prefWidth="500.0" style="-fx-background-color: black; -fx-background-radius: 15px;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.SalasananvaihtoController">
     <children>
         <Label fx:id="usernameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="71.0" prefHeight="30.0" prefWidth="500.0" text="KÄYTTÄJÄNIMI" textFill="WHITE">
             <font>
