--- a/src/main/resources/fxml/uusiKayttaja.fxml
+++ b/src/main/resources/fxml/uusiKayttaja.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: black; -fx-background-radius: 15px;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.UusiKayttajaController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: black; -fx-background-radius: 15px;" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.UusiKayttajaController">
     <children>
         <Button fx:id="luokayttajaNappi" layoutX="153.0" layoutY="489.0" mnemonicParsing="false" onMouseClicked="#luokayttajaNappiPainettu" prefHeight="49.0" prefWidth="291.0" text="LUO KÄYTTÄJÄ">
             <font>
