--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -189,7 +189,7 @@
       <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" GridPane.columnIndex="3" />
       <HBox prefHeight="26.0" prefWidth="234.0" GridPane.columnIndex="7" GridPane.valignment="BOTTOM">
          <children>
-            <Button fx:id="LogoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT" textOverrun="CLIP">
+            <Button fx:id="logoutBtn" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="30.0" prefWidth="107.0" text="LOGOUT" textOverrun="CLIP">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
